# 3-python-package-bogosort-but-better-1

./: README.md  demo.py  pyproject.toml  setup.py
src/bohancompliment/: __init__.py  generator.py
tests/: test_bohancompliment.py
