[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bohancompliment"  
version = "0.2.0"
description = "A fun package that generates compliments."
authors = [
    { name = "Bohan Hou", email = "bh2422@nyu.edu" },
]
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/software-students-fall2024/3-python-package-bogosort-but-better-1"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
